styles/competition.css
.content-top {
    margin-top: 10vh;
    width: 100vw;
    box-sizing: border-box;
}

.content-top .image img {
    max-width: 100%;
}

.title {
    color: #4154F1;
    font-size: 20px;
    margin-top: 120px;
    font-weight: 600;
    margin-bottom: 0;
    text-align: center;
}

.slogan {
    color: #012970;
    font-size: 40px;
    font-weight: 700;
    text-align: center;
    margin-top: 20px;
}

.about {
    display: grid;
    margin: 0 200px;
    grid-template-columns: 1fr 1fr;

    padding: 100px;
    column-gap: 50px;
    border-radius: 50px;

    -webkit-box-shadow: 0px 0px 50px 6px rgb(237, 237, 237);
    -moz-box-shadow: 0px 0px 50px 6px rgb(237, 237, 237);
    box-shadow: 0px 0px 50px 6px rgb(237, 237, 237);
}

.about h1 {
    color: var(--light-blue);
    font-weight: 400;
}

.about h2 {
    color: var(--navy);
    font-weight: 400;
}

.about img {
    width: 80%;
    height: 80%;
    border-radius: 25px;
}

.carousel-button {
    background-color: var(--light-blue) !important;
}

.carousel-button:hover {
    background-color: var(--dark-blue) !important;
}

.card {
    height: auto !important;
    aspect-ratio:unset !important;
}

.carousel {
    height: 500px !important;
}

.entriesTitle {
    margin-top: 100px;
    color: var(--light-blue);
    padding-left: 50px;
}

.provitaCompetition {
    text-align: center;
    color: var(--navy);
    margin-top: 50px;
    font-size: 40px;
}

.competitionInfo {
    display: grid;
    grid-template-columns: 1fr 2fr;
    column-gap: 50px;
    padding: 0 100px;
    margin-bottom: 25px;
}

.competitionInfo .image {
    display: flex;
    align-items: center;
    justify-content: center;
}

.buttons {
    display: flex;
    justify-content: space-around;
    flex-direction: column;
    gap: 40px;
    width: 90%;
    padding: 50px 0 !important;
}

.buttons a {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 80%;

    -webkit-box-shadow: 0px 0px 50px 6px rgb(237, 237, 237);
    -moz-box-shadow: 0px 0px 50px 6px rgb(237, 237, 237);
    box-shadow: 0px 0px 50px 6px rgb(237, 237, 237);
    text-align: center;
    text-decoration: none;
    color: black;
    font-size: 30px;

    color: var(--light-blue);

    transition: all .4s;
}

.buttons a:hover {
    color: white;
    background-color: var(--light-blue);
}


@media only screen and (max-width: 1200px) {
    .about {
        padding: 20px;
        margin: 20px;
        display: block;
    }

    .about .text h1 {
        text-align: center;
    }

    .carousel {
        display: none !important;
    }

    .card {
        display: block !important;
        width: 80% !important;
    }

    .carousel-button {
        display: none !important;
    }

    .entriesTitle {
        display: none;
    }

    .competitionInfo {
        display: block;
    }
}

